# Taller1_RocketLeague

./: .config.yml  .gitignore  .rl_config.yml  CMakeLists.txt  README.md  build.sh  correcciones-grupo6.ods  install.sh  obs-grupo6.md  observaciones.md  uninstall.sh
.github/ISSUE_TEMPLATE/: epic.md  task.md
common_src/: custom_error.cpp  lobby.cpp  lobby_command.h  lobby_command_create.cpp  lobby_command_error.cpp  lobby_command_error.h  protocol.h
src/: CMakeLists.txt
src/build-qt-menu-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
src/build-qt-menu-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f8b7d22b0e51c07ed75c.json  cmakeFiles-v1-c87e45ccd76173207010.json  codemodel-v2-efaba461dadab7fde238.json  index-2022-12-06T02-24-13-0464.json  target-qt-menu-Debug-68c50e7681a435502591.json  target-qt-menu_autogen-Debug-970235d1edbd7685aac3.json
src/client/: ClientCar.cpp  ClientCar.h  ClientCarState.cpp  ClientCarState.h  ClientMatch.cpp  ClientMatch.h  ClientMatchState.cpp  ClientMatchState.h  ClientRocketLeague.cpp  ClientRocketLeague.h  EventHandler.cpp  EventHandler.h  Field.h  Game.cpp  Game.h  LobbyClient.cpp  LobbyClient.h  MixerManager.cpp  MixerManager.h  MockProvider.h  client.cpp  client.h  client_main.cpp  client_thread_receiver.cpp  client_thread_receiver.h  client_thread_sender.cpp  client_thread_sender.h  thread_receiver.cpp  thread_receiver.h  thread_sender.cpp  thread_sender.h
src/client/helpers/: MockProvider.cpp  MockProvider.h  PositionConverter.cpp  PositionConverter.h
src/client/model/: ClientBallState.cpp  ClientBallState.h  ClientCarState.cpp  ClientCarState.h  ClientMatchState.cpp  ClientMatchState.h  ClientScorerState.cpp  ClientScorerState.h
src/client/presentation/: ClientBall.cpp  ClientBall.h  ClientCar.cpp  ClientCar.h  ClientMatch.cpp  ClientMatch.h  ClientNitroBar.cpp  ClientNitroBar.h  Field.cpp  Field.h  GoalAnimation.cpp  GoalAnimation.h  Scorer.cpp  Scorer.h
src/client/threads/: client_thread_receiver.cpp  client_thread_receiver.h  client_thread_sender.h
src/common/: ball_state.cpp  ball_state.h  blocking_queue.h  car_state.cpp  car_state.h  custom_error.h  lobby.cpp  lobby.h  lobby_command.cpp  lobby_command.h  lobby_command_create.h  lobby_command_handler.cpp  lobby_command_handler.h  lobby_command_join.cpp  lobby_command_join.h  lobby_command_list.cpp  lobby_command_list.h  lobby_match.cpp  lobby_match.h  lobby_match_error.cpp  lobby_match_error.h  match_setup.cpp  match_setup.h  match_state.cpp  match_state.h  non_blocking_queue.h  protocol.cpp  protocol.h  queue_closed_exception.cpp  queue_closed_exception.h  queue_empty_exception.cpp  queue_empty_exception.h  socket.cpp  socket.h  socket_closed_exception.cpp  socket_closed_exception.h  thread.cpp  thread.h  transferable.h  user_action.cpp  (+1 more)
src/game_model/: car.h
src/qt-menu/: CMakeLists.txt  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  configwidget.cpp  configwidget.h  configwidget.ui  creategamewidget.cpp  creategamewidget.h  creategamewidget.ui  joingamewidget.cpp  joingamewidget.h  joingamewidget.ui  main.cpp  menu.cpp  menu.h  menu.ui
src/server/: server.cpp  server.h  server_main.cpp  thread_acceptor.cpp  thread_acceptor.h  thread_connection_handler.cpp  thread_connection_handler.h  thread_match_handler.cpp  thread_match_handler.h  thread_matchs_handler.cpp  thread_matchs_handler.h  thread_receiver.cpp  thread_receiver.h  thread_sender.cpp  thread_sender.h
src/server/b2d_model/: ball.cpp  ball.h  car.cpp  car.h  game_model.cpp  game_model.h
src/server/game_model/: car.cpp  car.h  game_model.h
src/server/game_model/game_model/: ball.h  car.cpp
src/server_src/: game_model.h
src/test/: CMakeLists.txt  protocol_test.cc  socket_test.cpp  socket_test.h
unit-test/: CMakeLists.txt  hello_test.cc
